assets/css/edit.css
/* EDIT */


/* --------------------------------------------------------- top bar */

#edittopbar {
    background-color: var(--secondary-background-color);
}

#edittopbar a {
    color: var(--text-color);
}
.fontsize, .highlighttheme {
    display: flex;
    gap: var(--spacing);
    align-items: center;
}

.pageid {
    max-width: 30vw;
    overflow: hidden;
    text-overflow: ellipsis;
    display: inline-block;
    vertical-align: bottom;
}

/* --------------------------------------------------------- side bar collapsible panels */

/* overwrites global behavior */
#leftbar :checked ~ .toggle-panel, #rightbar :checked ~ .toggle-panel {
    width: 280px;
    max-width: none;
}
/* overwrites global behavior */
#leftbar .toggle-panel-content, #rightbar .toggle-panel-content {
    padding: 0;
    background-color: var(--tertiary-background-color);
}
/* overwrites global behavior */
.toggle-panel-content summary {
    list-style: none;
    background-color: var(--secondary-background-color);
    font-size: 1em;
    padding: var(--spacing);
    color: var(--text-color);
}

/* open / closed metadata informations */
aside details summary::before { content: "+ "; font-family: mono;}
aside details[open] summary::before { content: "- " }


/* --------------------------------------------------------- left bar fieldsets */

fieldset {
    display: flex;
    flex-direction: column;
    gap: var(--spacing);
    padding: var(--spacing);
    border: none;
    margin: 0;
}
input[type="text"],input[type="number"],input[type="time"], textarea {
    width: 100%;
}
textarea {
    resize: vertical;
}


/* --------------------------------------------------------- left bar geomap */

div#geomap {
    width: 100%;
    height: 250px;
}


/* --------------------------------------------------------- left bar authors */

#authors .level {
    opacity: 0.5;
    font-size: smaller;
}


/* --------------------------------------------------------- tabs */

.tabs {
    flex: 2;
    position: relative;
    height: 100%;
    background: var(--main-color);
    display: flex;
    overflow: hidden;
    gap: var(--half-spacing);
}

.tabs .tab .content {
	position: absolute;
	left: 0px;
	width: 100%;
	height: calc(100% - 30px);
	visibility: hidden;
}

.checkboxtab {
	display: none;
}

/* align first tab with CodeMirror line numbering column */
.js .tab:first-child {
    margin-left: 1.75em;
}

.tab>label {
	display: inline-block;
    position: relative;
    padding: var(--half-spacing) var(--spacing) calc(var(--spacing) + var(--half-spacing));
    top: 4px;
    left: 4px;
    vertical-align: top;
    color: var(--text2-color);
    white-space: nowrap;
}

/* if the tab contains anything */
.tab>label.edited {
    text-decoration: underline;
    text-decoration-style: dashed;
    text-decoration-color: color-mix(in srgb, var(--text2-color) 70%, var(--main-color) 30%);
    text-underline-offset: .15em;
}

/* @todo: report an issue: $templates[$key] never returns anything */
.tab>label.template {
    color: var(--text2-color);
}

.checkboxtab:checked ~ label {
    background: var(--input-background-color);
    color: var(--input-color);
    border-radius: var(--radius) var(--radius) 0 0;
}
.checkboxtab:checked ~ label.edited {
    text-decoration-color: color-mix(in srgb, var(--input-color) 70%, var(--input-background-color) 30%);
}

.checkboxtab:checked ~.content {
	visibility: visible;
}

.tabs textarea {
	height: 100%;
	width: 100%;
	border: none;
	resize: none;
	padding: var(--spacing);
    border-radius: 0;
	font-family: monospace;
	line-height: var(--editor-line-height);
	text-wrap: nowrap;
}

textarea#editcontent {
    text-wrap: wrap;
  } 

/* --------------------------------------------------------- tabs */

#advanced label {
    width: 100%;
    display: flex;
    white-space: nowrap;
    overflow: hidden;
    text-overflow: ellipsis;
    justify-content: space-between;
    align-items: baseline;
}

/* --------------------------------------------------------- right bar links */

#rightbar table {
    width: 100%;
    table-layout: fixed;
    border-collapse: collapse;
}

#rightbar table td {
    padding: var(--padding);
}

#rightbar table td.id {
    overflow: hidden;
    text-overflow: ellipsis;
    white-space: nowrap;
}

#internal-links td.read, #internal-links td.edit {
    width: 13%;
}

#external-links ul a {
    width: calc(100% - 25px);
    display: inline-block;
    text-overflow: ellipsis;
    overflow: hidden;
    text-wrap: nowrap;
}

#external-links li {
    font-size: smaller;
    padding: var(--half-padding);
}

#external-links li:hover, #internal-links tr:hover, #stats tr:hover {
    background-color: var(--outline-background-color);
    color: var(--outline-color);
}

/* --------------------------------------------------------- right bar comments */

.comment {
    margin: var(--spacing);
    margin-bottom: var(--double-spacing);
    font-size: var(--size-small);
}

.comment .id {
    float: right;
    padding: var(--double-padding);
}

.comment .id:before {
    content: "#";
}

.comment .message {
    background: var(--primary-background-color);
    padding: var(--double-padding);
    margin: var(--half-spacing) 0;
    border-radius: var(--radius);
    white-space: break-spaces;
    user-select: text;
}

.comment .date {
    font-size: var(--size-small);
    text-align: right;
    float: right;
}

.comment .delete {
    accent-color: red;
}

.comment .approve {
    accent-color: green;
}

.comment .neutral {
    accent-color: #e87f00;
}

.moderation, .comment .date, .comment .id {
    opacity: 0.5;
}
  
.comment:hover .moderation, .comment:hover .date, .comment:hover .id {
    opacity: 1;
}
  
  
/* --------------------------------------------------------- help */

#help kbd {
    border: 1px solid #000000c7;
    padding: 1px 4px;
    background-color: var(--main-color);
    color: var(--text2-color);
    box-shadow: 3px 2px #000000c7;
    border-radius: 4px;
}

#help {
    line-height: 1.4;
    min-width: 250px;
}

#help code {
    background-color: var(--code-background-color);
    color: var(--code-color);
    padding: 2px;
    margin-right: 5px;
    white-space: pre;
}

#help code i {
    color: var(--text2-color);
    opacity: .7;
}

#help h4:not(:first-of-type){
    margin-top: 1.5em;
}
#help p,
#help li {
    margin: .5em 0;
    margin-bottom: 8px;
}


/* --------------------------------------------------------- thumbnail */

div#showthumbnail img {
    width: 100%;
    height: 100%;
    max-height: 150px;
    object-fit: scale-down;
    padding: 2%;
}


/* --------------------------------------------------------- Custom CodeMirror CSS */

.CodeMirror {
    height: 100% !important;
    cursor: text;
    line-height: var(--editor-line-height);
}

/* CodeMirror Wcms mode */
.cm-wcms, .cm-wkeyword {
    color: var(--outline-color);
    background-color: var(--outline-background-color);
}

span.cm-wkeyword {
    text-decoration: underline;
}

.cm-wikilink {
    color: rgb(98, 81, 248);
    font-weight: bold;
}

/* To make markdown heading bigger */
.tabs[data-markdownheading="1"] .CodeMirror-line:has(.cm-header-1) { font-size: 200%; }
.tabs[data-markdownheading="1"] .CodeMirror-line:has(.cm-header-2) { font-size: 160%; }
.tabs[data-markdownheading="1"] .CodeMirror-line:has(.cm-header-3) { font-size: 130%; }
.tabs[data-markdownheading="1"] .CodeMirror-line:has(.cm-header-4) { font-size: 115%; }

/* disable selection styling inside CodeMirror*/
.CodeMirror *::selection {
    color: inherit;
    background: inherit;
}


/* --------------------------------------------------------- Media queries */

@media (max-width: 550px) {
    main {
      flex-direction: column;
      overflow-y: scroll;
    }

    #leftbar :checked ~ .toggle-panel,
    #rightbar :checked ~ .toggle-panel {
        /* full width panels */
        width: 100%;
        max-width: none;
    }

    /* reorder panels */
    #leftvar { order: 1 }
    #rightbar { order: 2; }
    .tabs { order: 3 }
    
    /* no js / codemirror ? reset first tab spacing */
    .js .tab:first-child {
        margin-left: var(--half-spacing);
    }

    /* hide page name within save button */
    .pageid, 
    /* hide editor font-size input + label */
    .fontsize {
        display: none;
    }
}

@media (max-height: 450px) and (max-width: 700px) {
    .toggle-panel-container {
        display: none;
    }
}

